Fix: minxin min-player heigt problem and rank component word-wrap

--- a/src/common/less/mymixin.less
+++ b/src/common/less/mymixin.less
@@ -4,3 +4,19 @@
     background-image: ~"url(@{url}@3x.png)";
   }
 }
+.no-wrap() {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+// 多行文本超出显示省略号
+.no-wrap-multi(@n) {
+  display: -webkit-box !important;
+  -ms-text-overflow: ellipsis;
+  text-overflow:ellipsis;
+  overflow: hidden;
+  word-break: break-all;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: @n; // 可显示行数
+}
